# skill-management

./: .gitignore  AGENTS.md  CONTEXT.md  Cargo.toml  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml
crates/skill-workspace/: Cargo.toml
crates/skill-workspace/src/: detail.rs  duplicate.rs  edit.rs  file_operations.rs  lib.rs  organization.rs
crates/skill-workspace/tests/: desktop_gateway_contract.rs  duplicate_merge.rs  duplicate_review.rs  file_operations.rs  localized_errors.rs  root_management.rs  search_catalog.rs  skill_details.rs  skill_editing.rs  skill_organization.rs  skill_workspace.rs  v1_acceptance.rs
docs/: local-only-architecture.md  macos-desktop-smoke.md  performance-baseline.md  security-boundaries.md  v1-acceptance.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
prototype/skill-manager-ui/: NOTES.md  README.md  app.js  index.html  package.json  styles.css
scripts/: run-macos-smoke.mjs  verify-local-only.mjs  verify-ui-contract.mjs
src/: App.test.tsx  App.tsx  DuplicateGovernance.test.tsx  DuplicateGovernance.tsx  SafeFileOperations.test.tsx  SafeFileOperations.tsx  SkillOrganization.test.tsx  SkillOrganization.tsx  duplicate-governance.css  errors.test.ts  errors.ts  gateway.ts  main.tsx  models.ts  safe-file-operations.css  skill-organization.css  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: desktop_smoke.js  desktop_smoke.rs  lib.rs  main.rs
