[package]
name = "skill-management-desktop"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[lib]
name = "skill_management_desktop"
path = "src/lib.rs"
crate-type = ["lib", "cdylib", "staticlib"]

[features]
custom-protocol = ["tauri/custom-protocol"]
desktop-smoke = []

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
skill-workspace = { path = "../crates/skill-workspace" }
tauri = { version = "2.11.5", features = [] }
tauri-plugin-dialog = "2.7.1"
