[package]
name = "skill-workspace"
version = "0.1.0"
edition = "2024"

[dependencies]
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
trash = { version = "5.2.6", default-features = false }
zip = { version = "8.3.0", default-features = false, features = ["deflate-flate2-zlib-rs"] }

[dev-dependencies]
tempfile = "3"
